# DS6030

./: README.md  homework.html  index.html  syllabus.html
R/: bootstrap.R  classification.R  clustering.R  density.R  instacart.R  intro.Rmd  node-predict.R  supervised_1.R  supervised_2.R
cases/: advertising.Rmd  advertising.html  instacart.html
css/: after_body.html  before_body.html  course.css
homework/: _quarto.yml  final-project.html  hw-style.css  hw0.Rmd  hw0.html  hw0.qmd  hw1.Rmd  hw1.html  hw1.qmd  hw10.Rmd  hw10.html  hw10.qmd  hw11.Rmd  hw11.html  hw2.Rmd  hw2.html  hw2.qmd  hw3.Rmd  hw3.html  hw3.qmd  hw4.Rmd  hw4.html  hw4.qmd  hw5.Rmd  hw5.html  hw5.qmd  hw6.Rmd  hw6.html  hw6.qmd  hw7.Rmd  hw7.html  hw7.qmd  hw8.Rmd  hw8.html  hw8.qmd  hw9.Rmd  hw9.html  hw9.qmd  pyproject.toml
site_libs/bootstrap/: bootstrap-2167a9fed1121d816990205e3db909d0.min.css  bootstrap-25dcc24f98fb01037ce0ab6fa2227425.min.css  bootstrap-56002c46c47735ef33351a192132d9bd.min.css  bootstrap-c4cfde65dc918cedb64ad1b890756580.min.css  bootstrap-e68f6f79ab5fcc5d6b1d3d37c20312d7.min.css
